tests/schemas/error/012_missing_device_name.fcp
version: "3"

device {
    some_field: 1,
}
